<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/res_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".views.restaurant_detail.RestaurantDetailActivity">

    <FrameLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/res_img_bg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bg_shimmer"
            android:contentDescription="@string/res_bg_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/search_bar_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20" />

        <LinearLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/round_btn_size"
                android:layout_height="@dimen/round_btn_size"
                android:background="@drawable/btn_icon_round"
                android:contentDescription="@string/round_btn"
                android:src="@drawable/ic_arrow_back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="@dimen/round_btn_size"
                android:layout_height="@dimen/round_btn_size"
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/btn_icon_round"
                android:contentDescription="@string/round_btn"
                android:src="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/btn_plus"
                android:layout_width="@dimen/round_btn_size"
                android:layout_height="@dimen/round_btn_size"
                android:background="@drawable/btn_icon_round"
                android:contentDescription="@string/round_btn"
                android:src="@drawable/ic_plus" />

        </LinearLayout>

    </FrameLayout>


    <TextView
        android:id="@+id/res_name_detail"
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:maxLines="3"
        android:text="@string/restaurant_name"
        android:textAlignment="center"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/border_tab_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res_name_detail"
        app:tabIndicator="@drawable/btn_tab_bar"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/button_review"
        app:tabIndicatorGravity="stretch"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/option_chosen_text"
        app:tabTextAppearance="@style/RestaurantDetailTabBar"
        app:tabTextColor="@color/option_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_btn" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_btn" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_btn" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_btn" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>